update: vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,10 @@
         "editor.codeActionsOnSave": {
             "source.organizeImports": true
         }
-    }
+    },
+    "cSpell.words": [
+        "capfd",
+        "datetime",
+        "fixpoint"
+    ]
 }
